Add more tests, refactoring and gradle check fixes